Add Render deployment configuration for backend
- Created Dockerfile for Spring Boot backend with multi-stage build
- Created render.yaml for automated deployment with PostgreSQL database
- Updated CORS configuration to allow Vercel domains (*.vercel.app)
- Backend ready to deploy to Render with free tier PostgreSQL
- CORS now supports localhost (dev) and Vercel (production)